--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="61f6af">  <td>23/07/07 17:58:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SuccessTest.validateProductSelected()[pri:0, instance:com.naveenautomationlabs.AutomationFramework.Tests.SuccessTest@1da2cb77]">validateProductSelected</td> 
-  <td>main@259564670</td>   <td></td> </tr>
-<tr bgcolor="f7cd89">  <td>23/07/07 17:58:04</td>   <td>-6046</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpLogger()[pri:0, instance:com.naveenautomationlabs.AutomationFramework.Tests.SuccessTest@1da2cb77]">&gt;&gt;setUpLogger</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@259564670</td>   <td></td> </tr>
-<tr bgcolor="61f6af">  <td>23/07/07 17:58:04</td>   <td>-5862</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuccessTest.setUp()[pri:0, instance:com.naveenautomationlabs.AutomationFramework.Tests.SuccessTest@1da2cb77]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@259564670</td>   <td></td> </tr>
-<tr bgcolor="61f6af">  <td>23/07/07 17:58:13</td>   <td>3673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuccessTest.tearDown()[pri:0, instance:com.naveenautomationlabs.AutomationFramework.Tests.SuccessTest@1da2cb77]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@259564670</td>   <td></td> </tr>
+<tr bgcolor="7194ba">  <td>23/07/09 14:10:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpLogger()[pri:0, instance:com.naveenautomationlabs.AutomationFramework.Tests.IphoneTest@2b91004a]">&gt;&gt;setUpLogger</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="ccb269">  <td>23/07/09 14:10:36</td>   <td>10291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IphoneTest.validateProductSelected()[pri:0, instance:com.naveenautomationlabs.AutomationFramework.Tests.IphoneTest@2b91004a]">validateProductSelected</td> 
+  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="ccb269">  <td>23/07/09 14:10:26</td>   <td>258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IphoneTest.setUp()[pri:0, instance:com.naveenautomationlabs.AutomationFramework.Tests.IphoneTest@2b91004a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
 </table>
